[package]
name = "autd3-examples"
version = "12.3.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "debug"
path = "src/debug.rs"

[[bin]]
name = "async"
path = "src/async.rs"
required-features = ["async"]

[[bin]]
name = "soem"
path = "src/soem.rs"
required-features = ["soem"]

[[bin]]
name = "remote_soem"
path = "src/remote_soem.rs"
required-features = ["remote_soem"]

[[bin]]
name = "twincat"
path = "src/twincat.rs"
required-features = ["twincat"]

[[bin]]
name = "remote_twincat"
path = "src/remote_twincat.rs"
required-features = ["remote_twincat"]

[[bin]]
name = "simulator_client"
path = "src/simulator_client.rs"
required-features = ["simulator_client"]

[[bin]]
name = "simulator_server"
path = "src/simulator_server.rs"
required-features = ["simulator_server"]

[[bin]]
name = "monitor"
path = "src/monitor.rs"
required-features = ["monitor"]

[[bin]]
name = "freq_config"
path = "src/freq_config.rs"

[[bin]]
name = "geometry_viewer"
path = "src/geometry_viewer.rs"
required-features = ["geometry_viewer"]

[dependencies]
anyhow = "1.0.57"
autd3 = {path="../src/autd3"}
autd3-core = {path="../src/autd3-core", version="12.3.0"}
autd3-gain-holo = {path="../src/autd3-gain-holo", version="12.3.0"}
autd3-link-simulator = {path="../src/autd3-link-simulator", optional = true, version="12.3.0"}
autd3-simulator = {path="../src/autd3-simulator", optional = true, version="12.3.0"}
autd3-geometry-viewer = {path="../src/autd3-geometry-viewer", optional = true, version="12.3.0"}
autd3-link-soem = {path="../src/autd3-link-soem", optional = true, version="12.3.0"}
autd3-link-twincat = {path="../src/autd3-link-twincat", optional = true, version="12.3.0"}
autd3-link-monitor = {path="../src/autd3-link-monitor", optional = true, version="12.3.0"}
autd3-modulation-audio-file = {path="../src/autd3-modulation-audio-file", version="12.3.0"}
colored = "2.0.0"
tokio = { version = "1.28.2", features = ["full"], optional = true}

[features] 
default = []
async = ["tokio"]
simulator_client = ["autd3-link-simulator"]
simulator_server = ["autd3-simulator"]
soem = ["autd3-link-soem/local"]
remote_soem = ["autd3-link-soem/remote"]
twincat = ["autd3-link-twincat/local"]
remote_twincat = ["autd3-link-twincat/remote"]
monitor = ["autd3-link-monitor"]
geometry_viewer = ["autd3-geometry-viewer"]
all = ["soem", "remote_soem", "twincat", "remote_twincat", "monitor", "simulator_client", "simulator_server", "geometry_viewer", "async"]

single_float = ["autd3/single_float"]
use_meter = ["autd3/use_meter", "autd3-geometry-viewer/use_meter", "autd3-simulator/use_meter"]
