[package]
name = "autd3-examples"
version = "14.0.1"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"
license = "MIT"

[[example]]
name = "debug"

[[example]]
name = "async"
required-features = ["async"]

[[example]]
name = "soem"
required-features = ["soem"]

[[example]]
name = "remote_soem"
required-features = ["remote_soem"]

[[example]]
name = "twincat"
required-features = ["twincat"]

[[example]]
name = "remote_twincat"
required-features = ["remote_twincat"]

[[example]]
name = "simulator_client"
required-features = ["simulator_client"]

[[example]]
name = "simulator_server"
required-features = ["simulator_server"]

[[example]]
name = "monitor"
required-features = ["monitor"]

[[example]]
name = "freq_config"

[[example]]
name = "geometry_viewer"
required-features = ["geometry_viewer"]

[[example]]
name = "lightweight"
required-features = ["lightweight"]

[dependencies]
anyhow = "1.0.57"
autd3 = { path = "../src/autd3" }
autd3-core = { path = "../src/autd3-core", version = "14.0.1" }
autd3-gain-holo = { path = "../src/autd3-gain-holo", version = "14.0.1" }
autd3-link-simulator = { path = "../src/autd3-link-simulator", optional = true, version = "14.0.1" }
autd3-simulator = { path = "../src/autd3-simulator", optional = true, version = "14.0.1" }
autd3-geometry-viewer = { path = "../src/autd3-geometry-viewer", optional = true, version = "14.0.1" }
autd3-link-soem = { path = "../src/autd3-link-soem", optional = true, version = "14.0.1" }
autd3-link-twincat = { path = "../src/autd3-link-twincat", optional = true, version = "14.0.1" }
autd3-link-monitor = { path = "../src/autd3-link-monitor", optional = true, version = "14.0.1" }
autd3-modulation-audio-file = { path = "../src/autd3-modulation-audio-file", version = "14.0.1" }
autd3-protobuf = { path = "../src/autd3-protobuf", optional = true, version = "14.0.1" }
colored = "2.0.0"
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"], optional = true }

[features]
default = []
async = ["tokio"]
simulator_client = ["autd3-link-simulator"]
simulator_server = ["autd3-simulator"]
soem = ["autd3-link-soem/local"]
remote_soem = ["autd3-link-soem/remote"]
twincat = ["autd3-link-twincat/local"]
remote_twincat = ["autd3-link-twincat/remote"]
monitor = ["autd3-link-monitor"]
geometry_viewer = ["autd3-geometry-viewer"]
lightweight = ["autd3-protobuf", "tokio"]
all = ["soem", "remote_soem", "twincat", "remote_twincat", "monitor", "simulator_client", "simulator_server", "geometry_viewer", "async", "lightweight"]
single_float = ["autd3/single_float"]
use_meter = ["autd3/use_meter", "autd3-geometry-viewer/use_meter", "autd3-simulator/use_meter"]
