[metadata]
name = pyautd3
version = 14.2.2
description = AUTD3 library wrapper for python
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
    LICENSE.txt
    ThirdPartyNotice.txt
author = Shun Suzuki
author_email = suzuki@hapis.k.u-tokyo.ac.jp
url = https://github.com/shinolab/autd3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = 
    pyautd3
    pyautd3.bin
    pyautd3.native_methods
    pyautd3.gain
    pyautd3.gain.holo
    pyautd3.modulation
    pyautd3.link
    pyautd3.stm
    pyautd3.extra
python_requires = >=3.9
include_package_data = True
install_requires =
    numpy
