[package]
name = "autd3capi-common"
version = "16.0.3"
edition = "2021"
license = "MIT"

[dependencies]
autd3 = { path = "../../src/autd3", default-features = false, features = ["sync"] }
autd3-driver = { path = "../../src/autd3-driver" }
autd3-gain-holo = { path = "../../src/autd3-gain-holo" }
autd3-derive = { path = "../../src/autd3-derive" }
libc = "0.2.144"
async-trait = "0.1.74"

[features]
single_float = ["autd3/single_float", "autd3-driver/single_float", "autd3-gain-holo/single_float"]
use_meter = ["autd3/use_meter", "autd3-driver/use_meter", "autd3-gain-holo/use_meter"]
