[package]
name = "autd3capi-def"
version = "17.0.2"
edition = "2021"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]

license = "MIT"
description = "Base library for autd3 C API"
repository = "https://github.com/shinolab/autd3"
readme = "README.md"
keywords = ["autd"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
autd3 = { path = "../../src/autd3", default-features = false, features = ["sync"], version = "17.0.2" }
autd3-driver = { path = "../../src/autd3-driver", features = ["sync"], version = "17.0.2" }
autd3-gain-holo = { path = "../../src/autd3-gain-holo", version = "17.0.2" }
autd3-derive = { path = "../../src/autd3-derive", version = "17.0.2" }
libc = "0.2.144"

[build-dependencies]
autd3capi-wrapper-generator = { path = "../autd3capi-wrapper-generator", version = "17.0.2" }

[features]
single_float = ["autd3/single_float", "autd3-driver/single_float", "autd3-gain-holo/single_float"]
use_meter = ["autd3/use_meter", "autd3-driver/use_meter", "autd3-gain-holo/use_meter"]
generate_wrapper = []

[dev-dependencies]
assert_approx_eq = "1.1.0"
memoffset = "0.9.0"
