[package]
name = "autd3capi-gain-holo"
version = "14.0.1"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
autd3capi-def = {path="../autd3capi-def", version="14.0.1"}

[build-dependencies]
wrapper-generator = {path="../wrapper-generator"}

[dev-dependencies]
autd3capi = {path="../autd3capi", version="14.0.1"}

[features]
single_float = ["autd3capi-def/single_float"]
use_meter = ["autd3capi-def/use_meter"]
parallel = ["autd3capi-def/parallel"]
