[package]
name = "autd3capi-gain-holo"
version = "15.3.1"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
autd3capi-def = { path = "../autd3capi-def" }

[build-dependencies]
wrapper-generator = { path = "../wrapper-generator" }

[features]
single_float = ["autd3capi-def/single_float"]
use_meter = ["autd3capi-def/use_meter"]
parallel = ["autd3capi-def/parallel"]
