[package]
name = "autd3capi-gain-holo"
version = "19.0.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
autd3capi-def = { path = "../autd3capi-def" }

[build-dependencies]
autd3capi-wrapper-generator = { path = "../autd3capi-wrapper-generator" }

[features]
single_float = ["autd3capi-def/single_float"]
use_meter = ["autd3capi-def/use_meter"]
