[package]
name = "autd3capi-geometry-viewer"
version = "10.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
autd3capi-common = {path="../autd3capi-common", version="10.0.0"}
autd3-geometry-viewer = {path="../../src/autd3-geometry-viewer", version="10.0.0"}
libc = "0.2.144"

[build-dependencies]
wrapper-generator = {path="../wrapper-generator"}

[features]
single_float = ["autd3capi-common/single_float"]
use_meter = ["autd3capi-common/use_meter"]
parallel = ["autd3capi-common/parallel"]
