[package]
name = "autd3capi-link-simulator"
version = "15.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
autd3capi-def = { path = "../autd3capi-def" }
autd3-link-simulator = { path = "../../src/autd3-link-simulator" }

[build-dependencies]
wrapper-generator = { path = "../wrapper-generator" }
