[package]
name = "autd3capi-link-simulator"
version = "19.0.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
autd3capi-def = { path = "../autd3capi-def" }
autd3-link-simulator = { path = "../../src/autd3-link-simulator", features = ["sync"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }

[build-dependencies]
autd3capi-wrapper-generator = { path = "../autd3capi-wrapper-generator" }
