[package]
name = "autd3capi-link-soem"
version = "17.0.2"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
autd3capi-def = { path = "../autd3capi-def" }
autd3-link-soem = { path = "../../src/autd3-link-soem", features = ["local", "remote", "sync"] }

[build-dependencies]
autd3capi-wrapper-generator = { path = "../autd3capi-wrapper-generator" }
