[package]
name = "autd3capi-link-twincat"
version = "19.0.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
autd3capi-def = { path = "../autd3capi-def" }
autd3-link-twincat = { path = "../../src/autd3-link-twincat", features = ["local", "remote"] }

[build-dependencies]
autd3capi-wrapper-generator = { path = "../autd3capi-wrapper-generator" }
