[package]
name = "autd3capi-link-visualizer"
version = "16.0.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
autd3capi-def = { path = "../autd3capi-def" }
autd3-link-visualizer = { path = "../../src/autd3-link-visualizer", features = ["plotters", "python", "gpu"] }

[build-dependencies]
wrapper-generator = { path = "../wrapper-generator" }

[features]
single_float = ["autd3-link-visualizer/single_float"]
