[package]
name = "autd3capi-modulation-audio-file"
version = "14.0.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
autd3capi-def = {path="../autd3capi-def", version="14.0.0"}
autd3-modulation-audio-file = {path="../../src/autd3-modulation-audio-file", version="14.0.0"}

[build-dependencies]
wrapper-generator = {path="../wrapper-generator"}
