[package]
name = "autd3capi-modulation-audio-file"
version = "15.3.1"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
autd3capi-def = { path = "../autd3capi-def" }
autd3-modulation-audio-file = { path = "../../src/autd3-modulation-audio-file" }

[build-dependencies]
wrapper-generator = { path = "../wrapper-generator" }
