[package]
name = "autd3capi-simulator"
version = "14.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
autd3capi-def = { path = "../autd3capi-def", version = "14.1.0" }
autd3-simulator = { path = "../../src/autd3-simulator", version = "14.1.0" }
serde_json = "1.0.96"

[build-dependencies]
wrapper-generator = { path = "../wrapper-generator" }

[features]
single_float = ["autd3capi-def/single_float"]
left_handed = ["autd3-simulator/left_handed"]
use_meter = ["autd3capi-def/use_meter", "autd3-simulator/use_meter"]
parallel = ["autd3capi-def/parallel"]
