[package]
name = "autd3capi-wrapper-generator"
version = "17.0.3"
edition = "2021"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]

license = "MIT"
description = "Wrapper code generator for autd3 C API"
repository = "https://github.com/shinolab/autd3"
readme = "README.md"
keywords = ["autd"]

[dependencies]
anyhow = "1.0.72"
convert_case = "0.6.0"
itertools = "0.12.0"
syn = { version = "2.0.18", features = ["parsing", "full"] }
cbindgen = "0.26.0"
glob = "0.3.1"
csbindgen = "1.8.3"
regex = "1.10.2"
